--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Parses request/response log files from Alexa",
   "main": "index.js",
   "dependencies": {
-    "aws-sdk": "^2.28.0"
+    "aws-sdk": "^2.28.0",
+    "bluebird": "^3.5.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
