--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "alexa-logger",
   "version": "1.0.0",
-  "description": "Parses request/response log files from Alexa",
+  "description": "Parses request and response log files from Alexa",
   "main": "index.js",
   "dependencies": {
     "aws-sdk": "^2.28.0",
     "bluebird": "^3.5.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/test.js"
   },
   "repository": {
     "type": "git",
